Fixed z-index bug on project feed

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
 	height: 100vh;
 	height: 100dvh;
 	overflow: hidden;
-	z-index: 0;
+	z-index: 1;
 }
 
 #grid-logo {
@@ -164,11 +164,17 @@ body {
 	place-items: start;
 	align-content: start;
 	width: 100%;
-	z-index: 3;
+	z-index: 0;
 }
 
 .project-row {
 	display: contents;
+}
+
+.project-row:hover > * {
+	background-color: var(--dark-color);
+	color: var(--light-color);
+	cursor: pointer;
 }
 
 .project-cell {
